--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.5"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.28.11",
