--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
