--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.10.2",
+    "react-multi-date-picker": "^4.4.1",
     "react-router-dom": "^6.22.3",
     "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.3.0",
